# arbor-validation

./: json_params.json
arbor/: CMakeLists.txt  parameters.hpp  single-soma.cpp  single.cpp
arbor/common/: readme.md
arbor/mod/: borgka.mod  cagk.mod  cat.mod  ccanl.mod  ccanlrev.mod  gskch.mod  ichan2.mod  lca.mod  nca.mod
neuron/: cell.hoc  init.hoc  test_single.py  test_soma.py  vecstim.mod
neuron/modfiles/: cagk.mod  cat.mod  gskch.mod  ichan2.mod
